Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -96,25 +96,35 @@
         "\n",
         "La gran mayoría (si no es que todos) de los procesadores de texto como:\n",
         "\n",
-        "*   Word.\n",
-        "*   Oppen Office.\n",
-        "*   Google Docs.\n",
-        "*   Lyx.\n",
-        "*   Overleaf.\n",
+        "*   *Word*.\n",
+        "*   *Oppen Office*.\n",
+        "*   *Google Docs*.\n",
+        "*   *Lyx*.\n",
+        "*   *Overleaf*.\n",
         "\n",
         "O incluso editores de código como:\n",
         "\n",
-        "*   Eclipse.\n",
-        "*   NetBeans.\n",
-        "*   NotePad++.\n",
-        "*   Atom.\n",
-        "*   InteliJ.\n",
-        "\n",
+        "*   *Eclipse*.\n",
+        "*   *NetBeans*.\n",
+        "*   *NotePad++*.\n",
+        "*   *Atom*.\n",
+        "*   *InteliJ*.\n",
         "\n",
         "Cuentan con herramientas que nos permiten realizar búsquedas dentro de los archivos que estemos manejando.\n",
         "\n",
         "Estas herramientas de búsqueda van de búsquedas tan sencillas, como lo puede ser la búsqueda de una determinada palabra dentro de los documentos, hasta un identificar un patrón y reemplazarlo.\n",
-        "\n"
+        "\n",
+        "Normalmente estos procesadores cuentan con el atajo (*shortcut*) que se activa mediante la combinación de las teclas ctrl+f y eso abre el dialogo para generar la búsqueda o el reemplazo de un determinado patrón.\n",
+        "\n",
+        "En la siguiente animación vamos a usar *Eclipse* para mostrar una pequeña búsqueda y remplazo de un determinado patrón usando texto.\n",
+        "\n",
+        "Supongamos que por algún motivo se cometió un error en la lista de alumnos (ManejoDatos9180.txt) del curso de manejo de datos y todos los alumnos que tienen como carrera \"Actuaría\" debe ser reemplazada por \"Matemáticas Aplicadas\".\n",
+        "\n",
+        "La opción más sencilla es abrir este archivo y buscar (de manera manual) cada una de las coincidencias del patron \"Actuaría\" y reemplazarlo por la palabra \"Matemáticas Aplicadas\", sin embargo esta opción es muy tediosa y lenta, así que lo mejor es hacer uso de la \"búsqueda y reemplazo\" que ofrecen la gran mayoria de procesadores de texto, veamos.\n",
+        "\n",
+        "<center> \n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/procesador.gif?raw=1\" width=\"1000\"> \n",
+        "</center>"
       ]
     },
     {
@@ -123,9 +133,72 @@
         "id": "dbw2YTefsrov"
       },
       "source": [
-        "## Buscadores de Internet\n",
+        "## Navegadores de Internet\n",
         "\n",
-        "De igual manera, los buscadores de internet nos proporcionan herramientas para identificar patrones dentro de nuestra búsquedas o incluso para investigar el código *HTML* que conforma un sitio web."
+        "De igual manera, los navegadores de internet nos proporcionan herramientas para identificar patrones dentro de nuestra búsquedas o incluso para investigar el código *HTML* que conforma un sitio web.\n",
+        "\n",
+        "Una de las herramientas más útiles al realizar búsquedas mediante algún navegador de internet es el uso de la búsqueda dentro de una página. En la siguiente sección veremos como usar algúnas de estas herramientas con el navegador *Chrome*."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J_qe0uhs-Foy"
+      },
+      "source": [
+        "### *Chrome*\n",
+        "\n",
+        "Este es un navegador de código cerrado (significa que el código fuente no se encuentra disponible), fue desarrollado por la empresa *Google* y esta conformado por más de **7 millones de lineas de código**.\n",
+        "\n",
+        "Una de sus principales caracteristicas es que es gratuito y se puede instalar en la mayoría de sistemas operativos disponibles como:\n",
+        "\n",
+        "*   *Linux/Unix*.\n",
+        "*   *Windows*.\n",
+        "*   *IOS*.\n",
+        "*   *Android*.\n",
+        "*   *Solaris*.\n",
+        "\n",
+        "Su principal ventaja (en comparación del resto de navegadores) es que se integra de manera nativa con todos los productos que ofrece la compañía *Google*, como lo son: *smartphones*, *smartwatches*, *androidtv's*, correo electrónico, etc.\n",
+        "\n",
+        "En esta sección hablaremos de este navegador, sin embargo vale la pena aclarar que existe un gran número de navegadores de internet y cada uno tiene sus ventajas y desventajas."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uU9D83_tAkWz"
+      },
+      "source": [
+        "#### Búsquedas en un sitio web\n",
+        "\n",
+        "Para realizar una búsqueda una vez que nos encontramos en algún sitio web, es tan sencillo como presionar la combinación de teclas *ctrl+f* y eso desplegara el campo de texto para la búsqueda.\n",
+        "\n",
+        "En este campo basta con que escribamos el texto a buscar (patrón) y el navegador nos mostrará todas las coincidencias dentro del sitio web. En la siguiente animación puedes ver un pequeño ejemplo de dicha búsqueda.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/Buscar.gif?raw=1\" width=\"1000\"> \n",
+        "</center>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2LuOIx0SDPu6"
+      },
+      "source": [
+        "### Herramientas de desarrollo\n",
+        "\n",
+        "Además de poder administrar los complementos (*plugins*) y configurar elementos como seguridad, *cookies* y sincronización de cuentas, el navegador *Chrome* nos proporciona un menú de herramientas para desarrollador.\n",
+        "\n",
+        "En este menú podemos encontrar muchas herramientas que van desde informe de errores en el sitio web, hasta la visualización de elementos *CSS*, *XML* o incluso *HTML* de forma interactiva.\n",
+        "\n",
+        "Para acceder a este menú basta con ir a la parte superior derecha del navegador, desplegar el menú que se muestra en esta parte y elegir la opción \"Más herramientas\" y después \"Herramientas de desarrollador\", al elegir esta opción se despliega una pestaña adicional con un conjunto de herramientas que nos permiten analizar de manera más detallada los elementos que conforman un sitio web.\n",
+        "\n",
+        "En la siguiente animación se muestra como acceder a esta herramienta y como utilizar algunas de sus opciones.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/desarrollador.gif?raw=1\" width=\"1000\"> \n",
+        "</center>"
       ]
     },
     {
