Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -135,9 +135,56 @@
       "source": [
         "## Navegadores de Internet\n",
         "\n",
-        "De igual manera, los navegadores de internet nos proporcionan herramientas para identificar patrones dentro de nuestra búsquedas o incluso para investigar el código *HTML* que conforma un sitio web.\n",
+        "Desde los inicios de la civilización una de las principales formas de comunicación era mediante texto y de forma muy similar comenzo el desarrollo de lo que hoy conocemos como Internet. \n",
+        "\n",
+        "Inicialmente internet fue un proyecto militar que tenia la intención de conectar multiples computadoras (servidores) mediante una red para establecer comunicación entre ellas mediante mensajes de texto, posteriormente este proyecto dejo de pertencer unicamente a la milicia y se convirtio en lo que se conoció como [*ARPANET*](https://www.fib.upc.edu/retro-informatica/historia/internet.html).\n",
+        "\n",
+        "A continuación se muestra un breve resúmen de las distintas versiones de Internet a lo largo de los años:\n",
+        "\n",
+        "1.   Internet 1.0:\n",
+        "2.   Internet 2.0:\n",
+        "1.   Internet 3.0:\n",
+        "2.   Internet 4.0:\n",
+        "\n",
+        "De igual manera que los procesadores de texto, los navegadores de internet nos proporcionan herramientas para identificar patrones dentro de nuestra búsquedas o incluso para investigar el código *HTML* que conforma un sitio web.\n",
         "\n",
         "Una de las herramientas más útiles al realizar búsquedas mediante algún navegador de internet es el uso de la búsqueda dentro de una página. En la siguiente sección veremos como usar algúnas de estas herramientas con el navegador *Chrome*."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VdrcTSi_OlZg"
+      },
+      "source": [
+        "### *Cookies*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZSKm1ee4Oksd"
+      },
+      "source": [
+        "### Historial de búsquedas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D9qbvGqNOxUB"
+      },
+      "source": [
+        "### Memoria cache"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fli5vIsiQGQv"
+      },
+      "source": [
+        "### Servidores DNS"
       ]
     },
     {
@@ -186,7 +233,7 @@
         "id": "2LuOIx0SDPu6"
       },
       "source": [
-        "### Herramientas de desarrollo\n",
+        "#### Herramientas de desarrollo\n",
         "\n",
         "Además de poder administrar los complementos (*plugins*) y configurar elementos como seguridad, *cookies* y sincronización de cuentas, el navegador *Chrome* nos proporciona un menú de herramientas para desarrollador.\n",
         "\n",
@@ -199,6 +246,19 @@
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/desarrollador.gif?raw=1\" width=\"1000\"> \n",
         "</center>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FvmIzC9qO8pn"
+      },
+      "source": [
+        "### Otros navegadores\n",
+        "\n",
+        "Brave\n",
+        "Thor\n",
+        "Etc."
       ]
     },
     {
@@ -360,27 +420,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WsUUz0iksPGL"
-      },
-      "source": [
-        "\n",
-        "## **Apendice**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "WfmNVnjKsYzi"
       },
       "source": [
-        "### Referencias \n",
+        "# Referencias \n",
         "\n",
         "* Thomas H. Cormen: Introduction to Algorithms.\n",
-        "\n",
         "* Referencias Libro Web: Introduccion a Python.\n",
-        "\n",
         "* Referencias Daniel T. Joyce: Object-Oriented Data Structures.\n",
-        "\n",
         "* Referencias John C. Mitchell: Concepts in programing Languages."
       ]
     }
