Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -157,7 +157,13 @@
         "id": "VdrcTSi_OlZg"
       },
       "source": [
-        "### *Cookies*"
+        "### *Cookies*\n",
+        "\n",
+        "Las *cookies* (galletas) son las migajas que dejan los usuarios al acceder a sitios web, digamos que son pistas que recolecta el navegador web sobre la interacción del usuario con el sitio.\n",
+        "\n",
+        "Estas pistas ayudan al sitio web a identificar los gustos del usuario y también a agilizar el desempeño del sitio web. Normalmente estas *cookies* se usan con la finalidad de mejorar la experiencia del usuario, sin embargo a veces se usan de manera incorrecta para recopilar información sensible sobre los usuarios.\n",
+        "\n",
+        "Normalmente se pueden eliminar estas *cookies* de manera muy sencilla en todo navegador o incluso si haciendo del navegador en un equipo de cómputo público, lo ideal es acceder en **modo incógnito**, este modo le permite al usuario navegar sin temor a que su información sea recopilada."
       ]
     },
     {
@@ -166,7 +172,13 @@
         "id": "ZSKm1ee4Oksd"
       },
       "source": [
-        "### Historial de búsquedas"
+        "### Historial de navegación\n",
+        "\n",
+        "El historial de búsqueda es otra de las características que posee todo navegador de internet y ayuda tanto al sitio web como al dispositivo de cómputo a desplegar el sitio de manera más eficiente.\n",
+        "\n",
+        "De igual manera que con las *cookies*, es posible eliminar el historial de navegación de manera sencilla accediendo a la configuración del navegador.\n",
+        "\n",
+        "Cuando se usa el modo incógnito, el historial de búsqueda se deshabilita y todo lo que haya hecho el usuario no se guarda en el mismo."
       ]
     },
     {
@@ -175,7 +187,11 @@
         "id": "D9qbvGqNOxUB"
       },
       "source": [
-        "### Memoria cache"
+        "### Memoria Cache\n",
+        "\n",
+        "La memoria cache, es equivalente a una memoria a la que se va acceder frecuentemente, es una memoria limitada (como todo recurso computacional) pero muy útil ya que ayuda a cargar el contenido del sitio web mucho más rápido que si no se hiciera uso de la misma.\n",
+        "\n",
+        "Al igual que las *cookies* y el historial de navegación, la memoria cache puede ser vaciada, sin embargo hay que considerar las consecuencias de realizar esta acción. Cuando se vacía la memoria cache, le tomará más tiempo al navegador y en general a cualquier equipo de computo mostrar el contenido del sitio web."
       ]
     },
     {
@@ -184,7 +200,13 @@
         "id": "fli5vIsiQGQv"
       },
       "source": [
-        "### Servidores DNS"
+        "### Servidores DNS\n",
+        "\n",
+        "Los servidores *DNS* (*Doamin Name Server*) son los servidores que se encargan de almacenar los nombres y cartas de navegación de la red conocida como internet.\n",
+        "\n",
+        "Estos servidores se encargan de almacenar la ruta necesaria para acceder a un determinado servidor en el que se encuentre el sitio al que queremos acceder.\n",
+        "\n",
+        "Es una práctica común al manejar redes de computadoras tener respaldos de la información almacenada en todo servidor y en este caso en particular también los DNS son respaldados con frecuencia para evitar fallos en la red."
       ]
     },
     {
