Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -141,10 +141,10 @@
         "\n",
         "A continuación se muestra un breve resúmen de las distintas versiones de Internet a lo largo de los años:\n",
         "\n",
-        "1.   Internet 1.0:\n",
-        "2.   Internet 2.0:\n",
-        "1.   Internet 3.0:\n",
-        "2.   Internet 4.0:\n",
+        "1.   Internet 1.0: páginas estáticas, no se podían actualizar los contenidos.\n",
+        "2.   Internet 2.0: blogs, redes sociales, los contenidos son creados por los usuarios.\n",
+        "1.   Internet 3.0: se facilita la accesibilidad de las personas a la información, sin depender de qué dispositivo use para el acceso a ella\n",
+        "2.   Internet 4.0: en desarrollo.\n",
         "\n",
         "De igual manera que los procesadores de texto, los navegadores de internet nos proporcionan herramientas para identificar patrones dentro de nuestra búsquedas o incluso para investigar el código *HTML* que conforma un sitio web.\n",
         "\n",
@@ -278,9 +278,13 @@
       "source": [
         "### Otros navegadores\n",
         "\n",
-        "Brave\n",
-        "Thor\n",
-        "Etc."
+        "Existen distintos navegadores de internet y a continuación se listan algunos de los más conocidos:\n",
+        "\n",
+        "*   *Mozilla Firefox*: ya con bastantes años en desarrollo, *firefox* es el segundo navegador más usado y es muy similar a *chrome* en todas sus características.\n",
+        "*   *Opera*: este es un navegador de reciente surgimiento que cumple con la mayoría de los requisitos de cualquier navegador, incorporando bloque de anuncios y gestión de redes sociales.\n",
+        "*   *Safari*: este navegador surge para los usuarios del sistema operativo IOS, su principal características es que únicamente puede ser usado en dispositivos de la marca *Mac*. \n",
+        "*   *Brave*: es un navegador concebido especialmente para proteger la privacidad que es relativamente nuevo en el mundillo. Entre sus funciones de refuerzo de la privacidad encontramos los bloqueadores de anuncios, rastreadores y huella digital, así como permitir ocultar la IP al navegar por internet.\n",
+        "\n"
       ]
     },
     {
