Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -293,7 +293,7 @@
         "id": "M8XWKGZDkYsG"
       },
       "source": [
-        "## Expresiones Regulares (*RegEx*)\n",
+        "# Expresiones Regulares (*RegEx*)\n",
         "\n",
         "La búsqueda de patrones dentro de un conjunto de datos, es una un tanto sencilla para el cerebro humano ya que este ha gozado de miles de años de evolución para adaptarse a esta labor. Sin embargo hacer que una computadora pueda identificar patrones de igual manera que lo hace el cerebro humano no es una labor trivial. \n",
         "\n",
@@ -308,17 +308,10 @@
         "id": "SzWrpk6MkyGW"
       },
       "source": [
-        "### Definición\n",
+        "## Definición\n",
         "\n",
-        "Las regex son una secuencia de caracteres que forma un patrón de búsqueda y que son definidas por una **sintaxis especifica**. los patrones se interpretan como un conjunto de instrucciones que se ejecuta sobre un texto de entrada para producir un subconjunto o versión modificada del texto original."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZKbfEkUqlQqP"
-      },
-      "source": [
+        "Las regex son una secuencia de caracteres que forma un patrón de búsqueda y que son definidas por una **sintaxis especifica**. los patrones se interpretan como un conjunto de instrucciones que se ejecuta sobre un texto de entrada para producir un subconjunto o versión modificada del texto original.\n",
+        "\n",
         "Dado que las regex en si son un lenguaje, están conformadas por varios elementos que se describen a continuación junto con ejemplos de uso."
       ]
     },
@@ -333,8 +326,8 @@
         "* **Literales**: cualquier carácter se identifica consigo mismo, a menos que se trate de un **metacarater** con significado especial.\n",
         "\n",
         "* **Caractéres de escape**: son caracteres que nos permiten identificar elementos importantes en un texto, como lo serian:\n",
-        "  * \\begin{array}{|c|c|}\n",
-        "  \\hline\n",
+        "\\begin{array}{|c|c|}\n",
+        "\\hline\n",
         "\\text{Caracter de escape} & \\text{Significado}\\\\\n",
         "\\hline\n",
         "\\text{\\n} & \\text{Salto de linea} \\\\\n",
@@ -356,14 +349,16 @@
         "id": "7jRMKXcLn_eA"
       },
       "source": [
-        "### Metacaracteres\n",
+        "## Metacaracteres\n",
         "\n",
         "Los metacaracteres son la esencia de las regex y son lo que las hacen tan poderosas y versátiles. A continuación una lista de los metacaracteres mas importantes.\n",
         "\n",
         "* **Delimitadores**: estos metacaracteres nos permiten delimitar donde se requiere realizar la búsqueda de patrones dentro del texto.\n",
         "\n",
-        "  * \\begin{array}{|c|c|}\n",
-        "  \\hline\n",
+        "\\begin{array}{|c|c|}\n",
+        "\\hline\n",
+        "\\text{Caracter de escape} & \\text{Significado}\\\\\n",
+        "\\hline\n",
         "\\text{Metacaracter} & \\text{Descripcion}\\\\\n",
         "\\hline\n",
         "\\text{^} & \\text{Inicio de la linea.} \\\\\n",
@@ -388,25 +383,30 @@
       },
       "source": [
         "* **Clases predefinidas**: son metacaracteres que facilitan aun mas la búsqueda de patrones.\n",
-        "  * \\begin{array}{|c|c|}\n",
-        "  \\hline\n",
-        "\\text{\\w} & \\text{Un caracter alfanumerico (incluye \"_\")}\\\\\n",
+        "\n",
+        "\\begin{array}{|c|c|}\n",
         "\\hline\n",
-        "\\text{\\W} & \\text{Un caracter no alfanumerico} \\\\\n",
+        "\\text{Caracter de escape} & \\text{Significado}\\\\\n",
         "\\hline\n",
-        "\\text{\\d} & \\text{Un caracter numerico} \\\\\n",
+        "\\text{\\w} & \\text{Un caracter alfanumérico (incluye \"_\")}\\\\\n",
         "\\hline\n",
-        "\\text{\\D} & \\text{Un caracter no numerico}\\\\ \n",
+        "\\text{\\W} & \\text{Un caracter no alfanumérico} \\\\\n",
+        "\\hline\n",
+        "\\text{\\d} & \\text{Un caracter numérico} \\\\\n",
+        "\\hline\n",
+        "\\text{\\D} & \\text{Un caracter no numérico}\\\\ \n",
         "\\hline\n",
         "\\text{\\s} & \\text{Cualquier espacio, igual que [\\t\\n]}\\\\\n",
         "\\hline\n",
         "\\end{array}\n",
         "\n",
         "\n",
-        "* **Iteradores**: se utilizan para indicar el numero de ocurrencias de la regex previa.\n",
+        "* **Iteradores**: se utilizan para indicar el número de ocurrencias de la regex previa.\n",
         "\n",
-        "  * \\begin{array}{|c|c|}\n",
-        "  \\hline\n",
+        "\\begin{array}{|c|c|}\n",
+        "\\hline\n",
+        "\\text{Caracter de escape} & \\text{Significado}\\\\\n",
+        "\\hline\n",
         "\\text{*} & \\text{Cero o mas, similar a {0,}} \\\\\n",
         "\\hline\n",
         "\\text{+} & \\text{Una o mas, similar a {1,}} \\\\\n",
@@ -419,15 +419,8 @@
         "\\hline\n",
         "\\text{{n,m}} & \\text{Por lo menos $n$, pero no mas de $m$ veces}\\\\\n",
         "\\hline\n",
-        "\\end{array}"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0fF_AZ1uryqL"
-      },
-      "source": [
+        "\\end{array}\n",
+        "\n",
         "* **Alternativas**: se puede especificar una lista de alternativas de patrones usando el carácter ''|''. Las alternativas son evaluadas de izquierda a derecha, asi que la primer alternativa que coincida con el texto analizado sera seleccionada, ejemplo.\n",
         "\n",
         "  * tom(os|as) este regex hace match con cadenas de texto como, ''tomos'' o ''tomas''.\n",
@@ -441,6 +434,17 @@
         "  * (.)\\1+ encuentra 'aaaa' y 'cc', etc.\n",
         "\n",
         "  * (.+)\\1+ encuentra ''abab'' y ''123123'', etc."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "klq2d7Efzqsw"
+      },
+      "source": [
+        "## Ejemplo con *Eclipse*\n",
+        "\n",
+        "Veamos un ejemplo del uso de las *regex* usando el *IDE Eclipse*."
       ]
     },
     {
