--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "BusquedaDePatrones.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -434,6 +433,39 @@
         "  * (.)\\1+ encuentra 'aaaa' y 'cc', etc.\n",
         "\n",
         "  * (.+)\\1+ encuentra ''abab'' y ''123123'', etc."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GfyDJCbh2Dlm",
+        "outputId": "22262198-df6b-48aa-9b83-e8cae482ef0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://github.com/jugernaut/ManejoDatos/blob/desarrollo/utils/ManejodeDatos9180.txt"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-10-23 06:33:08--  https://github.com/jugernaut/ManejoDatos/blob/desarrollo/utils/ManejodeDatos9180.txt\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘ManejodeDatos9180.txt’\n",
+            "\n",
+            "ManejodeDatos9180.t     [ <=>                ] 142.77K  --.-KB/s    in 0.04s   \n",
+            "\n",
+            "2021-10-23 06:33:09 (3.77 MB/s) - ‘ManejodeDatos9180.txt’ saved [146198]\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
