--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "BusquedaDePatrones.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -436,39 +437,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GfyDJCbh2Dlm",
-        "outputId": "22262198-df6b-48aa-9b83-e8cae482ef0a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!wget https://github.com/jugernaut/ManejoDatos/blob/desarrollo/utils/ManejodeDatos9180.txt"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2021-10-23 06:33:08--  https://github.com/jugernaut/ManejoDatos/blob/desarrollo/utils/ManejodeDatos9180.txt\n",
-            "Resolving github.com (github.com)... 140.82.114.3\n",
-            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: unspecified [text/html]\n",
-            "Saving to: ‘ManejodeDatos9180.txt’\n",
-            "\n",
-            "ManejodeDatos9180.t     [ <=>                ] 142.77K  --.-KB/s    in 0.04s   \n",
-            "\n",
-            "2021-10-23 06:33:09 (3.77 MB/s) - ‘ManejodeDatos9180.txt’ saved [146198]\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "klq2d7Efzqsw"
@@ -477,6 +445,39 @@
         "## Ejemplo con *Eclipse*\n",
         "\n",
         "Veamos un ejemplo del uso de las *regex* usando el *IDE Eclipse*."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GfyDJCbh2Dlm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d409ba6-977d-48a9-990e-64ff6f6a04f4"
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-10-23 06:45:29--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3103 (3.0K) [text/plain]\n",
+            "Saving to: ‘ManejodeDatos9180.txt’\n",
+            "\n",
+            "\rManejodeDatos9180.t   0%[                    ]       0  --.-KB/s               \rManejodeDatos9180.t 100%[===================>]   3.03K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-10-23 06:45:29 (37.0 MB/s) - ‘ManejodeDatos9180.txt’ saved [3103/3103]\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
