Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -321,7 +321,7 @@
         "id": "impB3mEflRjZ"
       },
       "source": [
-        "### Elementos que conforman las regex\n",
+        "## Elementos que conforman las regex\n",
         "\n",
         "* **Literales**: cualquier carácter se identifica consigo mismo, a menos que se trate de un **metacarater** con significado especial.\n",
         "\n",
@@ -361,9 +361,9 @@
         "\\hline\n",
         "\\text{Metacaracter} & \\text{Descripcion}\\\\\n",
         "\\hline\n",
-        "\\text{^} & \\text{Inicio de la linea.} \\\\\n",
+        "\\text{^} & \\text{Inicio de la linea} \\\\\n",
         "\\hline\n",
-        "\\text{\\$} & \\text{Final de la linea.} \\\\\n",
+        "\\text{\\$} & \\text{Final de la linea} \\\\\n",
         "\\hline\n",
         "\\text{\\A} & \\text{Inicio del texto}\\\\ \n",
         "\\hline\n",
@@ -423,16 +423,15 @@
         "\n",
         "* **Alternativas**: se puede especificar una lista de alternativas de patrones usando el carácter ''|''. Las alternativas son evaluadas de izquierda a derecha, asi que la primer alternativa que coincida con el texto analizado sera seleccionada, ejemplo.\n",
         "\n",
-        "  * tom(os|as) este regex hace match con cadenas de texto como, ''tomos'' o ''tomas''.\n",
+        "  * tom(os|as) este *regex* hace match con cadenas de texto como, ''tomos'' o ''tomas''.\n",
         "\n",
-        "* **Subexpresiones**: se emplean paréntesis ''(..)'' para definir subexpresiones de regex, ejemplo.\n",
+        "* **Subexpresiones**: se emplean paréntesis ''(..)'' para definir subexpresiones de *regex*, ejemplo.\n",
         "\n",
-        "  * foob([0-9]|a+)r este regex busca cadenas como, ''foob0r'', ''foob1r'', ''foobar'', ''foobaar'', etc.\n",
+        "  * foob([0-9]|a+)r este *regex* busca cadenas como, ''foob0r'', ''foob1r'', ''foobar'', ''foobaar'', etc.\n",
         "\n",
-        "* **Memorias**: los metacaracteres \\1 a \\9 son empleados para que fijar una regex es decir busca la regex previamente encontrada, ejemplo.\n",
+        "* **Memorias**: los metacaracteres \\1 a \\9 son empleados para fijar una *regex* es decir busca la *regex* previamente encontrada, ejemplo.\n",
         "\n",
-        "  * (.)\\1+ encuentra 'aaaa' y 'cc', etc.\n",
-        "\n",
+        "  * (.)\\1+ encuentra 'rr' y '77', etc.\n",
         "  * (.+)\\1+ encuentra ''abab'' y ''123123'', etc."
       ]
     },
@@ -444,7 +443,12 @@
       "source": [
         "## Ejemplo con *Eclipse*\n",
         "\n",
-        "Veamos un ejemplo del uso de las *regex* usando el *IDE Eclipse*."
+        "Veamos un ejemplo del uso de las *regex* usando el *IDE Eclipse*, lo primero que vamos a necesitar es descargar el documento *ManejoDatos9180.txt*, este documento es un archivo de texto que con tiene información \"desordenada\" y que mediante *regex* vamos a organizar (también se le conoce como *parsear*).\n",
+        "\n",
+        "\n",
+        "Para obtener este documento, lo haremos mediante comandos de *linux*, vamos a usar el comando *wget* que sirve para descargar un archivo desde linea de comandos. El documento se encuentra en mi repositorio de github, así que basta con pasarle la *URL* al comando *wget* para que este lo descargue en nuestra sesión de *google colab*.\n",
+        "\n",
+        "En la siguiente celda de código se muestra este comando."
       ]
     },
     {
@@ -454,30 +458,73 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d409ba6-977d-48a9-990e-64ff6f6a04f4"
+        "outputId": "fdf4216e-df39-41fe-ac3e-c0e5083a824f"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-23 06:45:29--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "--2021-10-24 12:04:55--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3103 (3.0K) [text/plain]\n",
             "Saving to: ‘ManejodeDatos9180.txt’\n",
             "\n",
             "\rManejodeDatos9180.t   0%[                    ]       0  --.-KB/s               \rManejodeDatos9180.t 100%[===================>]   3.03K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-10-23 06:45:29 (37.0 MB/s) - ‘ManejodeDatos9180.txt’ saved [3103/3103]\n",
+            "2021-10-24 12:04:55 (54.9 MB/s) - ‘ManejodeDatos9180.txt’ saved [3103/3103]\n",
             "\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "muL4VJ1GLfqZ"
+      },
+      "source": [
+        "Una vez descargado el archivo, lo podemos ver en en el menú de archivo e incluso lo podemos descargar a nuestro equipo local.\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/texto.gif?raw=1\" width=\"1000\"> \n",
+        "</center>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lr000vw0MwIt"
+      },
+      "source": [
+        "Ya que tenemos el documento *ManejoDatos9180.txt* lo primero que podemos notar es que son datos de alumnos del curso de manejo de datos, donde cada linea contiene los siguientes datos:\n",
+        "\n",
+        "*   Número de alumno.\n",
+        "*   Nombre.\n",
+        "*   Carrera.\n",
+        "*   Correo electrónico.\n",
+        "*   Teléfono."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u3LQblBaN8-u"
+      },
+      "source": [
+        "### Obtener el primer nombre\n",
+        "\n",
+        "Supongamos que por algún motivo nos interesa obtener únicamente el primer apellido de cada alumno, sin considerar el resto de la información de cada alumno.\n",
+        "\n",
+        "Para esto lo primero es construir la *regex* que haga *match* (se ajuste) con el patrón buscado, igual que en todo desarrollo matemático, existen muchas formas de lograr llegar a esta expresión.\n",
+        "\n",
+        "Podemos notar que el patrón que nos interesa resaltar se encuentra entre 2 espacios en blanco, eso nos puede ayudar para construir nuestra *regex*, así que solo tenemos que ubicar los metacarcteres que describan el siguiente patrón, espacio en blanco seguido de uno o más caracteres y termina con un espacio en blanco."
       ]
     },
     {
