Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -321,7 +321,7 @@
         "id": "impB3mEflRjZ"
       },
       "source": [
-        "## Elementos que conforman las regex\n",
+        "## Elementos que conforman las *regex*\n",
         "\n",
         "* **Literales**: cualquier carácter se identifica consigo mismo, a menos que se trate de un **metacarater** con significado especial.\n",
         "\n",
@@ -518,13 +518,12 @@
         "id": "u3LQblBaN8-u"
       },
       "source": [
-        "### Obtener el primer nombre\n",
+        "### Obtener patrones\n",
         "\n",
         "Supongamos que por algún motivo nos interesa obtener únicamente el primer apellido de cada alumno, sin considerar el resto de la información de cada alumno.\n",
         "\n",
         "Para esto lo primero es construir la *regex* que haga *match* (se ajuste) con el patrón buscado, igual que en todo desarrollo matemático, existen muchas formas de lograr llegar a esta expresión.\n",
-        "\n",
-        "Podemos notar que el patrón que nos interesa resaltar se encuentra entre 2 espacios en blanco, eso nos puede ayudar para construir nuestra *regex*, así que solo tenemos que ubicar los metacarcteres que describan el siguiente patrón, espacio en blanco seguido de uno o más caracteres y termina con un espacio en blanco."
+        "\n"
       ]
     },
     {
