Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
+++ b/AlgoritmosBusqueda/03_BusquedaDePatrones.ipynb
@@ -432,7 +432,9 @@
         "* **Memorias**: los metacaracteres \\1 a \\9 son empleados para fijar una *regex* es decir busca la *regex* previamente encontrada, ejemplo.\n",
         "\n",
         "  * (.)\\1+ encuentra 'rr' y '77', etc.\n",
-        "  * (.+)\\1+ encuentra ''abab'' y ''123123'', etc."
+        "  * (.+)\\1+ encuentra ''abab'' y ''123123'', etc.\n",
+        "\n",
+        "Una guia completa y más detallada puede ser encontrada en el siguiente [enlace](https://www.ibm.com/docs/es/i/7.3?topic=expressions-regular)."
       ]
     },
     {
