--- a/AlgoritmosBusqueda/04_1_ManejoArchivos.ipynb
+++ b/AlgoritmosBusqueda/04_1_ManejoArchivos.ipynb
@@ -138,10 +138,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "rDwOIrAWd3S8",
-        "outputId": "d614a2b9-a67b-4dc5-8fd5-17d157be6ad9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a2c37f6c-89cc-4b32-dbf3-efa013b29acc"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt"
@@ -152,16 +152,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-25 08:01:19--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2021-10-27 06:38:45--  https://raw.githubusercontent.com/jugernaut/ManejoDatos/desarrollo/utils/ManejodeDatos9180.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3103 (3.0K) [text/plain]\n",
             "Saving to: ‘ManejodeDatos9180.txt’\n",
             "\n",
-            "\rManejodeDatos9180.t   0%[                    ]       0  --.-KB/s               \rManejodeDatos9180.t 100%[===================>]   3.03K  --.-KB/s    in 0s      \n",
+            "ManejodeDatos9180.t 100%[===================>]   3.03K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-10-25 08:01:19 (40.6 MB/s) - ‘ManejodeDatos9180.txt’ saved [3103/3103]\n",
+            "2021-10-27 06:38:45 (46.0 MB/s) - ‘ManejodeDatos9180.txt’ saved [3103/3103]\n",
             "\n"
           ]
         }
@@ -180,10 +180,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7ilCgCE4eDBY",
-        "outputId": "ecf02136-be80-4558-badb-59419af06bd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ecf02136-be80-4558-badb-59419af06bd6"
       },
       "source": [
         "# se abre el archivo\n",
@@ -195,7 +195,7 @@
         "print(archivo.readline())\n",
         "print(archivo.readline())\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,17 +217,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "griV7i0Je7WO",
-        "outputId": "f2c01d37-988d-40ea-90dc-1580cd3324db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2c01d37-988d-40ea-90dc-1580cd3324db"
       },
       "source": [
         "# mostrar contenido con foreach (el for comienza donde se quedo readline)\n",
         "for linea in archivo:\n",
         "  print(linea)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,10 +306,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZxjdBah4fCjd",
-        "outputId": "846ab2ce-14a3-4b91-aa46-6a4b0701c1aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "846ab2ce-14a3-4b91-aa46-6a4b0701c1aa"
       },
       "source": [
         "# se regresa al inicio del archivo\n",
@@ -318,7 +318,7 @@
         "# se muestra todo el contenido\n",
         "print(archivo.read())"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,8 +374,207 @@
         "# ****IMPORTANTE CERRAR EL ARCHIVO*****\n",
         "archivo.close()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rQU4zHu4antL"
+      },
+      "source": [
+        "# Lectura de archivos + *regex*\n",
+        "\n",
+        "Las expresiones regulares en si mismas ya son una herramienta muy poderosa para el manejo de datos, ya que prácitamente es posible generar cualquier expresión regular para el caso en el que nos encontremos.\n",
+        "\n",
+        "Sin embargo este poder de procesamiento se ve incrementado de manera exponencial cuando lo conbinamos con algún lenguaje de programación como lo es el caso de *Python*, veamos algunos ejemplos."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LV5v6HQ9bXK9"
+      },
+      "source": [
+        "## Modulo `re`\n",
+        "\n",
+        "El módulo `re` de *Python* es el módulo precargado (no es necesario instalarlo) que se encarga de permitirnos hacer uso de *regex* en combinación con *python*.\n",
+        "\n",
+        "Para hacer uso del mismo es tan sencillo como agregar la siguiente celda de código a nuestro algoritmo y ya podremos hacer uso de todas las funciones en este módulo, visita este [link](https://docs.python.org/es/3/library/re.html) para información más detallada del módulo `re`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MUUvJuxHcAhf"
+      },
+      "source": [
+        "import re"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zI7NJg6qcPiH"
+      },
+      "source": [
+        "Una vez que ya importamos el módulo `re` y que además ya tenemos los datos que vamos a procesar mediante expresiones regulares (*ManejodeDatos9180.txt*), veamos algunos ejemplos."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0d-uoQnpc2X5"
+      },
+      "source": [
+        "### Funcion `search`\n",
+        "\n",
+        "Esta funcion nos indica si una determinada expresión regular hace *match* con el texto que queremos analizar.\n",
+        "\n",
+        "Sabemos que en nuestro archivo de base da datos (*ManejodeDatos9180.txt*) existen correos electrónicos, así que de manera tramposa vamos a verificr que exista al menos un símbolo *@* haciendo uso del módulo `re`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PX_lPfYzd8Ov",
+        "outputId": "8a1be693-786c-4af2-c2b8-13dce4176e92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# generamos la expresion regular\n",
+        "patron = \"@\"\n",
+        "\n",
+        "# abrimos el archivo a leer\n",
+        "archivo = open(\"ManejodeDatos9180.txt\")\n",
+        "\n",
+        "# vemos si aparce el patron al menos una vez\n",
+        "x = re.search(patron, archivo.read())\n",
+        "\n",
+        "# si x es diferente de None, si existe el patron en los datos\n",
+        "if x:\n",
+        "  print(\"Si aparece\")\n",
+        "# si x es None significa que no existe el patron (compruebalo)\n",
+        "else:\n",
+        "  print(\"No aparece\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Si aparece\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xOFU1B_QfRVq"
+      },
+      "source": [
+        "### Función `findall`\n",
+        "\n",
+        "La función `findall` es de las funciones más útiles dentro del módulo `re` ya que nos devuelve una lista de todas las apariciones (coincidencias) del patrón a buscar dentro de nuestros datos.\n",
+        "\n",
+        "La siguiente *regex* hace *match* con todos los correos electrónicos dentro del archivo *ManejodeDatos9180.txt*.\n",
+        "\n",
+        "`[0-9a-z._-]*@[0-9a-z._-]*`\n",
+        "\n",
+        "Así que ahora mediante el módulo `re` vamos a extraer unicamente los correos y mostrarlos."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H40bII9oh7zO",
+        "outputId": "2f07d750-5b80-4bdf-dbd9-46a1a330183d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# generamos la expresion regular\n",
+        "patron = \"[0-9a-z._-]*@[0-9a-z._-]*\"\n",
+        "\n",
+        "# abrimos el archivo a leer\n",
+        "archivo = open(\"ManejodeDatos9180.txt\")\n",
+        "\n",
+        "# busquemos todas las incidencias del patron\n",
+        "x = re.findall(patron, archivo.read())\n",
+        "\n",
+        "print(x)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['alemanlex_plus_cool@hotmail.com', 'noe.amadorg@ciencias.unam.mx', 'aminahelue@ciencias.unam.mx', 'rodri030100@gmail.com', 'nicolecazares141@gmail.com', 'citlali.contreras.1999@gmail.com', 'adorantes@ciencias.unam.mx', 'rsanti955@gmail.com', 'michelle.0198.me@gmail.com', 'omaralejandro00g@gmail.com', 'rodrigotonatihu@ciencias.unam.mx', 'crisazami_123@ciencias.unam.mx', 'randy.jesus.garcia@gmail.com', 'beu.ribega@gmail.com', 'marigonzalez_240100@hotmail.com', 'leslye_joseline@ciencias.unam.mx', 'eggl@ciencias.unam.mx', 'trigranalex@ciencias.unam.mx', 'ulisesu13@ciencias.unam.mx', 'miguel_lerdodetejada@yahoo.com.mx', 'anv.ale558@gmail.com', 'rubennu00@ciencias.unam.mx', 'aranzazu-08@hotmail.com', 'axel.ramirez@ciencias.unam.mx', 'mariella_resendiz@yahoo.com', 'fer.loveswim.0408@gmail.com', 'rimucaser@gmail.com', 'aaronrojas@ciencias.unam.mx', 'octavius@ciencias.unam.mx', 'nictesalas@ciencias.unam.com', 'eliza160900@ciencias.unam.mx', 'sofysm99@gmail.com', 'danielavalle@ciencias.unam.mx', 'joseemanueltellezsoto@gmail.com', 'andreavasquez115@gmail.com', 'diego.zamarripa18@gmail.com']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vGfT9y-DiO4p"
+      },
+      "source": [
+        "¡Listo!, así de sencillo obtuvimos todos los correos electrónicos de nuestra base de datos y ahora podemos hacer con ellos lo que queramos.\n",
+        "\n",
+        "Vale la pena recalcar que dependiendo de la *regex* es lo que nos devuelve la función `findall`, puede ser que ademas del correo electrónico nos interese obtener el número telefónico y en ese caso es necesario modificar la *regex* para obtener un resultado diferente."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2w6cuAnTjA23"
+      },
+      "source": [
+        "### Función `split`\n",
+        "\n",
+        "Esta función nos ayuda a \"partir\" los datos de acuerdo a un patrón, por ejemplo supongamos que queremos que cada espacio en blanco sea un delimitador para los datos que estamos manejando."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vS5XDpgJjem5",
+        "outputId": "1cdb08c2-9a8c-4e4f-f6f8-700b21f871d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# generamos la expresion regular\n",
+        "patron = \"\\s\"\n",
+        "\n",
+        "# abrimos el archivo a leer\n",
+        "archivo = open(\"ManejodeDatos9180.txt\")\n",
+        "\n",
+        "# vemos la cadena partida por espacios\n",
+        "x = re.split(patron, archivo.read())\n",
+        "\n",
+        "print(x)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['No', 'Apellido', 'Apellido', '2', 'Nombre', 'Carrera', 'Correo', 'Telefono', '1', 'Alemán', 'Galicia', 'Diego', 'Leónardo', 'C.', 'Computación', 'alemanlex_plus_cool@hotmail.com', '44-635-28-288', '2', 'Amador', 'Gónzalez', 'Noé', 'Eusebio', 'Aplicadas', 'noe.amadorg@ciencias.unam.mx', '55-640-83-871', '3', 'Amaro', 'Islas', 'Yamile', 'Amalia', 'Zulema', 'Actuaría', 'aminahelue@ciencias.unam.mx', '55-4977-6159', '4', 'Cabrera', 'Pérez', 'Rodrígo', 'Actuaría', 'rodri030100@gmail.com', '55-477-61-948', '5', 'Cazares', 'Solis', 'Andrea', 'Nicole', 'Actuaría', 'nicolecazares141@gmail.com', '55-539-42-382', '6', 'Contreras', 'Chávez', 'Citlali', 'Actuaría', 'citlali.contreras.1999@gmail.com', '55-399-75-350', '7', 'Dorantes', 'Bravo', 'Alicia', 'Aplicadas', 'adorantes@ciencias.unam.mx', '55-128-98-209', '8', 'Durán', 'Santiago', 'Rafael', 'Aplicadas', 'rsanti955@gmail.com', '333-72-554-55', '9', 'Enríquez', 'Ríos', 'Michelle', 'Guadalupe', 'Actuaría', 'michelle.0198.me@gmail.com', '55-782-67-957', '10', 'Flores', 'Delgado', 'Omar', 'Alejandro', 'Actuaría', 'omaralejandro00g@gmail.com', '55-665-72-227', '11', 'Garcés', 'Garduño', 'Rodrígo', 'Tonatihu', 'Actuaría', 'rodrigotonatihu@ciencias.unam.mx', '55-244-10-361', '12', 'García', 'Azamar', 'Cristopher', 'Alejandro', 'Actuaría', 'crisazami_123@ciencias.unam.mx', '46-928-422-65', '13', 'García', 'Mejía', 'Randy', 'Jesús', 'Actuaría', 'randy.jesus.garcia@gmail.com', '55-580-24-293', '14', 'Gómez', 'Arteaga', 'Beu', 'Ribe', 'Actuaría', 'beu.ribega@gmail.com', '55-789-33-403', '15', 'Gónzalez', 'García', 'Maricela', 'Actuaría', 'marigonzalez_240100@hotmail.com', '55-907-91-129', '16', 'Guevara', 'Legaspe', 'Leslye', 'Joseline', 'Actuaría', 'leslye_joseline@ciencias.unam.mx', '55-121-67-977', '17', 'Gúzman', 'López', 'Eduardo', 'Gabriel', 'Aplicadas', 'eggl@ciencias.unam.mx', '55-970-28-624', '18', 'Hérnandez', 'López', 'Alejandro', 'Actuaría', 'trigranalex@ciencias.unam.mx', '55-161-68-809', '19', 'Juárez', 'Diosdado', 'Ulises', 'Aplicadas', 'ulisesu13@ciencias.unam.mx', '55-497-22-370', '20', 'Lerdo', 'de', 'Tejada', 'Flores', 'Miguel', 'Actuaría', 'miguel_lerdodetejada@yahoo.com.mx', '55-7190-3848', '21', 'Nuñez', 'Vega', 'Adive', 'Alejandra', 'Actuaría', 'anv.ale558@gmail.com', '5554-72-20-63', '22', 'Núñez', 'Sánchez', 'Ruben', 'Actuaría', 'rubennu00@ciencias.unam.mx', '55-660-99-872', '23', 'Pérez', 'Escartin', 'Maya', 'Aranzazu', 'Actuaría', 'aranzazu-08@hotmail.com', '55-376-26-789', '24', 'Ramírez', 'Carmona', 'Axel', 'Gabriel', 'Actuaría', 'axel.ramirez@ciencias.unam.mx', '55-812-56-695', '25', 'Reséndiz', 'Guerrero', 'Mariella', 'Vanesa', 'Actuaría', 'mariella_resendiz@yahoo.com', '55-583-43-525', '26', 'Rivera', 'Ramírez', 'María', 'Fernanda', 'Actuaría', 'fer.loveswim.0408@gmail.com', '55-489-59-362', '27', 'Rodríguez', 'Hérnandez', 'Ricardo', 'Aplicadas', 'rimucaser@gmail.com', '888-314-46-780', '28', 'Rodríguez', 'Rojas', 'Aarón', 'Israel', 'Actuaría', 'aaronrojas@ciencias.unam.mx', '55-931-23-412', '29', 'Rodríguez', 'Vega', 'Octavio', 'Matemáticas', 'octavius@ciencias.unam.mx', '55-366-59-591', '30', 'Salas', 'Reyes', 'Sac-Nicte', 'Damayanti', 'Aplicadas', 'nictesalas@ciencias.unam.com', '55-276-13-206', '31', 'Salinas', 'Avelino', 'Elizabeth', 'Actuaría', 'eliza160900@ciencias.unam.mx', '55-626-14-760', '32', 'Sánchez', 'Martínez', 'Fabiola', 'Sofía', 'Actuaría', 'sofysm99@gmail.com', '55-461-15-303', '33', 'Sánchez', 'Valle', 'Daniela', 'Itzel', 'Actuaría', 'danielavalle@ciencias.unam.mx', '77-174-67-488', '34', 'Téllez', 'Soto', 'José', 'Emanuel', 'Aplicadas', 'joseemanueltellezsoto@gmail.com', '55-93680-510', '35', 'Vásquez', 'Martínez', 'Andrea', 'Lizbeth', 'Actuaría', 'andreavasquez115@gmail.com', '55-687-34366', '36', 'Zamarripa', 'Ornelas', 'Diego', 'Mauricio', 'Actuaría', 'diego.zamarripa18@gmail.com', '55-458-69-357']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
